--- a/config/postgresql.toml
+++ b/config/postgresql.toml
@@ -4,5 +4,5 @@ host = "localhost"
 port = 5432
 user = "aisecurity"
 password = "aisecurity"
-dbname = "aisecurity"
-sslmode = "disable"
+db_name = "aisecurity"
+ssl_mode = "disable"
